fixed spacing and added application

--- a/includes/css/index.css
+++ b/includes/css/index.css
@@ -24,7 +24,7 @@
     background-color: rgba(0, 0, 0, 0.8);    
 }
 section{
-    padding: 0px 0 318px;
+    padding: 0px 0 5em;
     
 }
 
